<resources>
    <string name="app_name">c2c-learn</string>
    <string name="NavigateButtonLabel">Navigate</string>
    <string name="signupButtonLabel">Sign Up</string>
    <string name="goToLoginButton">Go TO Login</string>
    <string name="name">Name</string>
    <string name="loginButtonLabel">Login</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="hint_username">User Name</string>
    <string name="hint_password_field">Password</string>
    <string name="hint_email_address">Email Address</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="menuItemProfile">Profile</string>
    <string name="menuItemHome">Home</string>
    <string name="emailTextFieldLabel">Email</string>
    <string name="saveButtonLabel">Save</string>
    <string name="passwordTextFieldLabel">Password</string>
    <string name="profileFullNameTextFieldLabel">Full Name</string>
    <string name="profilepicLabel">Profile Picture</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="buttonSetImage">Set Image</string>
    <string name="create_post">Create Post</string>
    <string name="save">Save</string>
    <string name="menu_create_post">Create Post</string>
</resources>