<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="276dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/hint_password_field"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="356dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="192dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="173dp"
        android:layout_height="58dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="336dp"
        android:text="@string/loginButtonLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="114dp"
        android:layout_height="67dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:text="@string/log_in"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="162dp"
        android:layout_height="60dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="336dp"
        android:text="@string/sign_up_button_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>