<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="128dp"
        android:autofillHints="@string/hint_username"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="276dp"
        android:autofillHints="@string/hint_password_field"
        android:ems="10"
        android:hint="@string/hint_password_field"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="356dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="196dp"
        android:autofillHints="@string/hint_email_address"
        android:ems="10"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="173dp"
        android:layout_height="58dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="344dp"
        android:text="@string/signupButtonLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="142dp"
        android:layout_height="63dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:text="@string/sign_up"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>