<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="356dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="328dp"
        android:autofillHints="@string/hint_email_address"
        android:ems="10"
        android:hint="@string/hint_email_address"
        android:enabled="false"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="173dp"
        android:layout_height="58dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="508dp"
        android:text="@string/saveButtonLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="353dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="244dp"
        android:autofillHints="@string/profileFullNameTextFieldLabel"
        android:ems="10"
        android:hint="@string/profileFullNameTextFieldLabel"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="editTextFullName,editTextTextEmailAddress,saveButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:layout_height="218dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/profilepicLabel"
        android:src="@drawable/blankperson"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="353dp"
        android:layout_height="77dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="396dp"
        android:autofillHints="@string/hint_username"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="editTextFullName,imageView,editTextTextEmailAddress,saveButton,editTextUserName" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="editTextFullName,imageView,editTextTextEmailAddress,saveButton,editTextUserName" />
</androidx.constraintlayout.widget.ConstraintLayout>